--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/jquery-1.11.1.min.js"></script>
 
 <script src="js/bootstrap.js"></script>
+<meta name="theme-color" content="#00e58b">
 </head>
 
 <body>
